# etsu

./: CHANGELOG.md  Cargo.toml  ISSUES.md  SECOND_MAC_RUNBOOK.md  config.example.toml  readme.md  setup_macos.sh
migrations/postgres/: 20260312090000_device_identity.sql  20260315090000_explicit_utc_and_local_timestamps.sql
migrations/sqlite/: 20260312090000_device_identity.sql  20260314120000_supabase_sync.sql  20260315090000_explicit_utc_and_local_timestamps.sql  20260529080000_metrics_journal.sql
scripts/: create_macos_dev_signing_identity.sh  install_app_bundle.sh  install_launchd.sh  setup_macos.sh
src/: config.rs  db.rs  journal.rs  main.rs  persistence.rs  platform.rs  processing.rs  state.rs
